--- a/src/Components/Products/СartProduct/СartProduct.module.scss
+++ b/src/Components/Products/СartProduct/СartProduct.module.scss
@@ -1,15 +1,32 @@
 .cart {
+    position: relative;
     background-color: #ffffff;
     border: 1px solid #e5e3e3;
     border-radius: 40px;
     display: flex;
     flex-direction: column;
     padding: 20px 20px 34px;
-    transition: box-shadow .2s linear;
+    transition: box-shadow 0.2s linear;
 
-    @media(any-hover:hover){
-        &:hover{
-            box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.1)
+    @media (any-hover: hover) {
+        &:hover {
+            box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.1);
+        }
+    }
+
+    &__favorite {
+        position: absolute;
+        width: 32px;
+        height: 32px;
+        border-radius: 7px;
+        background-color: transparent;
+        overflow: hidden;
+        top: 30px;
+        left: 30px;
+        z-index: 2;
+        img {
+            width: 100%;
+            height: 100%;
         }
     }
 
@@ -18,22 +35,6 @@
         width: 113px;
         height: 112px;
         margin: 0 auto 14px;
-
-        button {
-            display: block;
-            position: absolute;
-            width: 32px;
-            height: 32px;
-            border-radius: 7px;
-            overflow: hidden;
-            top: 7px;
-            left: -3px;
-            z-index: 2;
-            img {
-                width: 100%;
-                height: 100%;
-            }
-        }
     }
 
     &__imageImg {
@@ -77,12 +78,12 @@
         }
     }
 
-    &__addCart{
+    &__addCart {
         width: 32px;
         height: 32px;
         border-radius: 7px;
         overflow: hidden;
-        img{
+        img {
             width: 100%;
             height: 100%;
             object-fit: contain;
